<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Bookstore</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title text for the empty view, which describes the empty image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="titleOfBook">Title of book</string>

    <string name="priceOfBook">Price of book</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Label for the book's price if the price is unknown [CHAR LIMIT=20] -->
    <string name="unknown_price">Unknown breed</string>
    <string name="dollar">$</string>

    <string name="name_error">You must put the name of product!</string>

    <string name="price_error">You must put the price of product!</string>

    <string name="quantity_error">You must put the quantity of product!</string>

    <string name="supplier_error">You must put the name of supllier!</string>

    <string name="phone_error">You must put the phone of supplier!</string>

</resources>
